--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ weights filter=lfs diff=lfs merge=lfs -text
 *.h5, filter=lfs diff=lfs merge=lfs -text
 .weights filter=lfs diff=lfs merge=lfs -text
 model.h5 filter=lfs diff=lfs merge=lfs -text
+yolov3.weights filter=lfs diff=lfs merge=lfs -text
